--- a/index.html
+++ b/index.html
@@ -411,6 +411,19 @@
                     <p style="color: #666; font-size: 0.9rem;">Gebure platform fee collection</p>
                 </div>
 
+                <!-- Fee Collector USDC -->
+                <div class="info-card">
+                    <h3>💸 Fee Collector USDC (0.5%)</h3>
+                    <p><strong>Amount:</strong> <span id="fee-usdc-amount">0</span> USDC</p>
+                    <p><strong>Token Account (ATA):</strong></p>
+                    <p style="font-family: monospace; font-size: 0.85rem; word-break: break-all; margin: 5px 0;">
+                        <a id="fee-usdc-link" href="" target="_blank" style="color: #667eea; text-decoration: none;">
+                            Loading...
+                        </a>
+                    </p>
+                    <p style="color: #666; font-size: 0.9rem;">USDC platform fees (ATA of 6bHam5U8Z5Qnrky86HMQfCGaWX7ie5hdyvKpJzAAjGHj)</p>
+                </div>
+
                 <!-- Treasury SOL -->
                 <div class="info-card">
                     <h3>🏦 Treasury SOL (80%)</h3>
@@ -525,8 +538,8 @@
             const scripts = [
                 'src/js/config.js',
                 'src/js/idls.js', 
-                'src/js/direct-contract.js?v=1757955555',
-                'src/js/app.js?v=1757955555'
+                'src/js/direct-contract.js?v=1757960000',
+                'src/js/app.js?v=1757960000'
             ];
             
             function loadScript(src) {
