🔧 Fix: USDC Purchase Error (Custom:6006) - Wallets Corregidas
✅ Problema Resuelto:
- Error Custom:6006 (Unauthorized) durante compras con USDC
- Frontend usaba wallets incorrectas para USDC

🔍 Investigación:
- Leído directamente del contrato desplegado (offset 197)
- Identificadas las wallets correctas del struct PresaleStateV3
- Verificado que las ATAs existen y tienen owners correctos

🛠️ Solución Implementada:
- Actualizadas wallets USDC en direct-contract.js (líneas 213-217)
  * fee_collector_usdc: J5HheDdCai2Hp6kU9MzJmCuttNFxDdWtYEWqtVpY2SbT
  * treasury_usdc: vYAXJaPhEMAXkK7x5oBK56WJBBp1CaZMSAoHxn6o7PS
  * secondary_usdc: 55pFq53FfhNWpxivfhaN3EAy6d4uL2KDkbwaoZM565eY
- Cache busting en index.html para forzar reload del navegador

✅ Prueba Exitosa:
- Script de compra directa con USDC funciona
- Transaction: 4tiDsPtzLd558LtJc28Dv8x3HYR19oSeZS6JNTcjvruHeY7EpVLqUGEbGE6U5FjztSX3enrb126ZdN5teSUcJrMj
- 1 USDC gastado exitosamente

📚 Documentación:
- Creado USDC_FIX_FINAL.md con análisis completo
- Script test_buy_with_usdc.js para futuras verificaciones
- Debugging tools agregados

🎯 Estado:
- Compras con SOL: ✅ Funcionando
- Compras con USDC: ✅ Funcionando (ARREGLADO)
- Staking: ✅ Funcionando
- Distribución de fondos: ✅ Correcta

Todas las compras ahora funcionan correctamente en mainnet.

--- a/index.html
+++ b/index.html
@@ -4365,7 +4365,7 @@
                 'src/js/notifications.js',
                 'src/js/solana-wallet-standard.js',
                 'src/js/idls.js', 
-                'src/js/direct-contract.js?v=1757960000',
+                'src/js/direct-contract.js?v=' + Date.now(),
                 'src/js/app-new.js?v=' + Date.now()
             ];
             
